WraDashboard/css/style.css
/* ... */
.my-table thead th.fixed,
.my-table2 thead th.fixed {
    position: relative;
    position: sticky;
    top: -1px;
    left: 0;
    z-index: 2;
    background-color: #F7FAFC;
}

.my-table tbody td.fixed,
.my-table2 tbody td.fixed {
    position: relative;
    position: sticky;
    left: 0;
    z-index: 1;
    background: #FFFFFF;
}

.my-table2 thead th::after {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    bottom: 0;
    width: 100%;
    height: 0;
    border-bottom: 1px solid #e5e7eb;
    background-color: #F7FAFC;
}

.my-table2 tbody td.fixed::after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 2;
    bottom: 0;
    width: 0;
    height: 100%;
    border-right: 1px solid #e5e7eb;
    background-color: #FFFFFF;
}

.my-table th,
.my-table td {
    /* white-space: nowrap; */
}

.my-table td.name,
.my-table2 td.name {
    min-width: 16em;
}

.my-table td.detail,
.my-table2 td.detail {
    text-align: center;
}

.my-table th,
.my-table td.late,
.my-table2 th,
.my-table2 td.late {
    white-space: nowrap;
}


/* MY TABLE2 -------------------- */

.my-table2-wrap {
    /* margin-bottom: 1em; */
    margin-bottom: 1em;
    position: relative;
    /* padding-bottom: 1em; */
    border: 1px solid #e5e7eb;
    border-radius: .25em;
    background-color: #F7FAFC;
    color: #94A4B8;
}

.width-max {
    max-width: 900px;
    margin: 0 auto;
}

.my-table2-wrap::before {
    content: "";
    display: block;
    position: sticky;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 10px;
    /* background-color: red; */
}

.my-table2-wrap::after {
    content: "";
    display: block;
    position: sticky;
    left: 0;
    right: 0;
    z-index: 2;
    bottom: 0;
    width: 100%;
    height: 10px;
    background-color: #F7FAFC;
    box-shadow: inset 0 1px 2px 0 rgba(0 0 0/0.05);
}

.my-table2-title {
    padding-left: .5rem;
    padding-right: 0.5em;
    padding-bottom: .5rem;
}

.my-table2 {
    width: 100%;
    font-size: 13px;
    box-sizing: content-box;
    /* overflow: hidden; */
}

.my-table2 th,
.my-table2 td {
    max-width: 20em;
    padding: .5em .5rem;
    font-weight: normal;
}

.my-table2 td {
    color: #64758B;
    border-top: 1px solid #e5e7eb;
    background-color: #FFFFFF;
}

a {
    color: #5470C6;
    text-decoration: none;
}


/* ============================= */

.grid.dashboard-detail {
    display: grid;
    margin: 8px;
    height: calc(100vh - 16px);
    grid-gap: 8px;
    grid-template-columns: 360px 1fr;
    grid-template-rows: 54px 210px auto;
    grid-template-areas: "query query" "plan stage" "plan list";
    box-sizing: border-box;
}

.grid.dashboard-detail.no-grid {
    grid-template-columns: 1fr;
    grid-template-rows: 54px 1fr;
    grid-template-areas: "query" "list";
}

.grid.no-grid .plan,
.grid.no-grid .stage {
    display: none;
}

.grid>div {
    padding: 12px;
    border-radius: 4px;
    background-color: #FFFFFF;
}

.dashboard-detail .query {
    width: 100%;
    grid-area: query;
}

.dashboard-detail .plan {
    grid-area: plan;
}

.dashboard-detail .stage {
    grid-area: stage;
    /* display: none; */
}

.dashboard-detail .list {
    grid-area: list;
    background-color: #F7FAFC !important;
}

.dashboard-detail *:not(.grid-title) {
    font-size: 13px !important;
}

.grid.dashboard-organizer {
    display: grid;
    margin: 8px;
    height: calc(100vh - 16px);
    grid-gap: 8px;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: auto auto;
    grid-template-areas: "top5 top5" "unit list";
    box-sizing: border-box;
    overflow: hidden;
}

.grid.dashboard-organizer .my-table2-wrap {
    height: calc(100% - 90px);
}

.grid.dashboard-organizer.no-grid .my-table2-wrap {
    height: calc(100% - 0);
}

.grid.dashboard-organizer.no-grid {
    /* grid-template-columns: 1fr 4fr; */
    grid-template-rows: 1fr;
    grid-template-areas: "unit list";
}

.grid.dashboard-organizer.no-grid .top5 {
    display: none;
}

.grid.dashboard-organizer .top5 {
    grid-area: top5;
}

.grid.dashboard-organizer .unit {
    grid-area: unit;
    width: 100%;
    /* overflow: auto; */
}

.grid.dashboard-organizer .list {
    grid-area: list;
    /* height: calc(100% - 30px); */
    overflow: hidden;
    background-color: #F7FAFC !important;
}

.grid-top5 {
    display: grid;
    grid-gap: 8px;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
}

.grid-top5 [class^="chart-"] {
    width: 100%;
    height: 180px;
    background-color: #555;
}

.wrap-select {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 5px;
    /* width: calc(100% / 11* 4 - 10px); */
}

.wrap-checkbox {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 5px;
    /* width: calc(100% / 11* 7 - 10px); */
    text-align: center;
}

.wrap-checkbox>* {
    display: inline-block;
    margin-top: 5px;
    ;
}

.wrap-checkbox input[type="checkbox"] {
    appearance: none;
}

.wrap-checkbox input,
.wrap-checkbox label {
    cursor: pointer;
}

.wrap-checkbox input[type="checkbox"]::before {
    content: "✓";
    display: inline-block;
    margin-left: 1em;
    padding: 0 .5em;
    border-radius: .25em;
    background-color: #CDCDCD;
    color: #FFFFFF;
    font-weight: bold;
    text-align: center;
    transition: .25s all;
}

.wrap-checkbox .legend-1:checked:before {
    background-color: #5470C6;
}

.wrap-checkbox .legend-2:checked:before {
    background-color: #91CC75;
}

.wrap-checkbox .legend-3:checked:before {
    background-color: #FAC858;
}

.wrap-checkbox .legend-4:checked:before {
    background-color: #EE6666;
}

.wrap-checkbox .legend-5:checked:before {
    background-color: #5ECDE1;
}

.grid-title {
    padding-bottom: .5em;
    font-size: 16px;
    font-weight: bold;
}

.grid-title.border-bottom {
    padding-bottom: 1em;
    /* border-bottom: 1px solid #EFEFEF; */
}
/* ... */

